<resources>
    <string name="app_name">Personal</string>

    <string name="loading" translatable="true">Cargando…</string>
    <string name="getResponse" translatable="true">Recibiendo respuesta.</string>

    <string name="titleCloseDialog" translatable="true">Cerrar aplicación</string>
    <string name="messageCloseDialog" translatable="true">¿Seguro que desea cerrar la aplicación?</string>
    <string name="positiveButtonCloseDialog" translatable="true">Cerrar</string>
    <string name="negativeButtonCloseDialog" translatable="true">No</string>

    <string name="titleErrorDialog" translatable="true">Error</string>
    <string name="messageErrorDialog" translatable="true">El mensaje no puede estar vacío</string>
    <string name="closeButtonErrorDialog" translatable="true">Aceptar</string>

    <string name="principalButtonLogout" translatable="true">Desconectarse</string>

    <string name="helpText" translatable="true">Ayuda</string>

    <string name="helpTextTitle" translatable="true">Este es el título de la pantalla de ayuda.</string>
    <string name="helpTextDialog" translatable="true">Aquí va la información que deseas mostrar en el diálogo.</string>
    <string name="closeHelpDialog" translatable="true">Cerrar</string>

    // FACEBOOK

    <string name="facebook_app_id">191036796893210</string>

    // LOGIN ACTIVITY

    <string name="loginTextViewWelcome" translatable="true">Bienvenido.</string>
    <string name="loginEdittextUsername" translatable="true">Correo electrónico</string>
    <string name="loginEdittextPassword" translatable="true">Contraseña</string>

    <string name="loginTextViewForgorPass" translatable="true">¿Has olvidado tu contraseña?</string>

    <string name="loginTextIncorrectPass" translatable="true">Contraseña incorrecta.</string>

    <string name="loginEmptyMail" translatable="true">El campo correo electrónico está vacío.</string>
    <string name="loginEmptyPass" translatable="true">El campo contraseña está vacío.</string>

    <string name="loginButtonLogIn" translatable="true">Ingresar</string>
    <string name="loginButtonRegister" translatable="true">Registrarse</string>
    <string name="loginButtonGoogle" translatable="false">Google</string>
    <string name="loginButtonTwitter" translatable="false">Twitter</string>
    <string name="loginButtonFacebook" translatable="false">Facebook</string>
    <string name="loginButtonMicrosoft" translatable="false">Microsoft</string>

    //REGISTER ACTIVITY

    <string name="registerEdittextUsername" translatable="true">Correo electrónico</string>
    <string name="registerEdittextPassword" translatable="true">Contraseña</string>
    <string name="registerEdittextRepeatPassword" translatable="true">Repita su contraseña</string>

    <string name="registerTextConfirmReg" translatable="true">Se ha registrado correctamente.</string>
    <string name="registerTextDenyReg" translatable="true">No se ha podido registrar.</string>

    <string name="registerTextPassNotEquals" translatable="true">Las contraseñas no coinciden.</string>
    <string name="registerTextError" translatable="true">Usuario ya existente.</string>

    <string name="registerButtonRegister" translatable="true">Registrarse</string>

    //CHAT ACTIVITY

    <string name="messageRequestEnable" translatable="true">Escribe tu mensaje aquí</string>
    <string name="messageRequestDisable" translatable="true">Esperando respuesta de ChatGPT</string>
    <string name="btnEnviar">Enviar</string>

</resources>