<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="600dp"
    android:orientation="vertical"
    android:padding="25dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="500dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/help_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingBottom="25dp"
                android:text="@string/helpTextTitle"/>

            <TextView
                android:id="@+id/help_text_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:paddingBottom="25dp"
                android:text="@string/helpTextDialog"/>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:text="@string/closeHelpDialog"/>

</LinearLayout>