<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="45"
    tools:context=".RegisterActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10" />

    <EditText
        android:id="@+id/editRegisterUsername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="1"
        android:inputType="textEmailAddress"
        android:hint="@string/registerEdittextUsername"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"/>

    <EditText
        android:id="@+id/editRegisterPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="1"
        android:inputType="textPassword"
        android:hint="@string/registerEdittextPassword"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"/>

    <EditText
        android:id="@+id/editRegisterRepeatPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="1"
        android:inputType="textPassword"
        android:hint="@string/registerEdittextRepeatPassword"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"/>

    <Button
        android:id="@+id/buttonRegisterRegistrar"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="1"
        android:text="@string/loginButtonRegister"/>

</LinearLayout>