<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="45"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="13" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/loginTextViewWelcome"
        android:textSize="30dp"
        android:layout_gravity="center_horizontal|center_vertical"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="1"
        android:inputType="textEmailAddress"
        android:visibility="gone"
        android:hint="@string/loginEdittextUsername" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="1"
        android:inputType="textPassword"
        android:visibility="gone"
        android:hint="@string/loginEdittextPassword"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_weight="2.5" />

    <TextView
        android:id="@+id/textForgorPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginTextViewForgorPass"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_weight="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7"
        android:visibility="gone"
        android:layout_weight="1">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonIngresar"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="2"
            android:text="@string/loginButtonLogIn"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonRegistrar"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="2"
            android:text="@string/loginButtonRegister"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_weight="2" />

    <View
        android:id="@+id/dividerSocialButtons"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="0.1"
        android:visibility="gone"
        android:background="?android:attr/listDivider" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_weight="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        android:layout_weight="1">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonGoogle"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="3"
            android:text="@string/loginButtonGoogle"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7"
        android:visibility="gone"
        android:layout_weight="1">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonFacebook"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="2"
            android:text="@string/loginButtonFacebook"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/butonMicrosoft"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="2"
            android:text="@string/loginButtonMicrosoft"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>